# ScreamAPI

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.adoc  README.md  ScreamAPI.ini  ScreamAPI.sln  build.ps1  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  user-warning.md
.github/workflows/: build-project.yml  ci.yml
Config/: Config.vcxproj  Config.vcxproj.filters
Config/src/: Config.cpp  Config.h  ConfigUtils.cpp  ConfigUtils.h  framework.h
Config/src/ini/: ini.c  ini.h
Logger/: Logger.vcxproj  Logger.vcxproj.filters
Logger/src/: Logger.cpp  Logger.h  framework.h
Overlay/: Overlay.vcxproj  Overlay.vcxproj.filters  packages.config
Overlay/src/: AchievementManagerUI.cpp  Loader.cpp  Loader.h  Overlay.cpp  Overlay.h  Overlay_types.h  achievement_manager_ui.cpp  achievement_manager_ui.h  framework.h  pch.h
Overlay/src/curl/lib/: libcurl_x64.lib  libcurl_x86.lib
Overlay/src/imgui/: imconfig.h  imgui.cpp  imgui_demo.cpp
Overlay/src/kiero/: kiero.h
Overlay/src/stb_image/: stb_image.h
ScreamAPI/: ScreamAPI.ini  ScreamAPI.vcxproj  ScreamAPI.vcxproj.filters  util.cpp
ScreamAPI/resources/: ScreamAPI.props  ScreamAPI.rc  resource.h
ScreamAPI/src/: Constants.h  LegacyExports32.h  LegacyExports64.h  LinkerExports.h  LinkerExports32.h  LinkerExports64.h  ScreamAPI.cpp  ScreamAPI.h  achievement_manager.cpp  achievement_manager.h  dllmain.cpp  framework.h  pch.h  util.cpp  util.h
ScreamAPI/src/LinkerExports/: LegacyExports32.h  LinkerExports32.h  LinkerExports64.h
ScreamAPI/src/eos-impl/: eos_achievements.cpp  eos_auth.cpp  eos_common.cpp  eos_connect.cpp  eos_ecom.cpp  eos_ecom_entitlements.cpp  eos_ecom_offers.cpp  eos_ecom_ownership.cpp  eos_ecom_transactions.cpp  eos_init.cpp  eos_sdk.cpp
ScreamAPI/src/eos-sdk/: eos_achievements.h  eos_achievements_types.h  eos_achievements_types_deprecated.inl  eos_anticheatcommon_types.h  eos_anticheatserver.h  eos_anticheatserver_types.h  eos_auth.h  eos_auth_types.h  eos_base.h  eos_common.h  eos_connect.h  eos_connect_types.h  eos_ecom.h  eos_ecom_types.h  eos_friends.h  eos_friends_types.h  eos_init.h  eos_kws.h  eos_leaderboards_types.h  eos_lobby.h  eos_lobby_types.h  eos_logging.h  eos_metrics.h  eos_metrics_types.h  eos_p2p.h  eos_p2p_types.h  eos_playerdatastorage.h  eos_playerdatastorage_types.h  eos_presence.h  eos_presence_types.h  eos_reports.h  eos_reports_types.h  eos_result.h  eos_rtc_admin.h  eos_rtc_audio.h  eos_rtc_audio_types.h  eos_rtc_types.h  eos_sanctions.h  eos_sanctions_types.h  eos_sdk.h  (+12 more)
ScreamAPI/src/eos-sdk/Windows/: eos_Windows.h
_LinkerExportsGenerator/: _LinkerExportsGenerator.cpp  _LinkerExportsGenerator.vcxproj  _LinkerExportsGenerator.vcxproj.filters
extra/: IDEACodeStyle.xml  README.txt  ScreamAPI.schema.json  ScreamAPI.schema.v1.json  test.ps1
include/sdk/: eos_achievements.h  eos_achievements_types.h  eos_achievements_types_deprecated.inl  eos_anticheatclient.h  eos_anticheatclient_types.h  eos_anticheatclient_types_deprecated.inl  eos_anticheatcommon_types.h  eos_anticheatserver.h  eos_anticheatserver_types.h  eos_auth.h  eos_auth_types.h  eos_base.h  eos_common.h  eos_connect.h  eos_connect_types.h  eos_custominvites.h  eos_custominvites_types.h  eos_ecom.h  eos_ecom_types.h  eos_friends.h  eos_friends_types.h  eos_init.h  eos_integratedplatform.h  eos_integratedplatform_types.h  eos_kws_types.h  eos_leaderboards_types.h  eos_lobby.h  eos_lobby_types.h  eos_logging.h  eos_metrics.h  eos_metrics_types.h  eos_mods_types.h  eos_p2p.h  eos_p2p_types.h  eos_platform_prereqs.h  eos_playerdatastorage_types.h  eos_presence_types.h  eos_progressionsnapshot.h  eos_progressionsnapshot_types.h  eos_reports_types.h  (+18 more)
include/sdk/Windows/: eos_Windows.h
res/: ScreamAPI.config.json  ScreamAPI.json  build_config.gen.h  exports_generator.cpp  extra_build_config.gen.h  version.gen.rc
src/: legacy_linker_exports.h  main.cpp  pch.hpp  std_ext.hpp
src/config/: config.cpp  config.hpp
src/eos/: common.cpp  ecom_entitlements.cpp  ecom_items.cpp  ecom_misc.cpp  init.cpp  logging.cpp  metrics.cpp
src/game_mode/: game_mode.cpp  game_mode.hpp
src/loader/: loader.cpp  loader.hpp
src/logger/: logger.cpp  logger.hpp
src/mitmproxy/: config.py  deploy.ps1  egs_addon.py  logger.py  paths.py
src/scream_api/: api.cpp  api.hpp  config.cpp  config.hpp  scream_api.cpp  scream_api.hpp
src/store_mode/: store_mode.cpp  store_mode.hpp
src/store_mode/mitmproxy/: deploy.ps1  egs_addon.py  requirements.txt  setup.ps1
src/util/: util.cpp  util.hpp
src/win_util/: win_util.cpp  win_util.hpp
